# PyPerf

./: README.md  cli.py  pyproject.toml
benchmarks/: benchmark_runner.py
examples/: example.py
optimizations/: caching_examples.py  naive_vs_optimized.py
profiler/: cprofile_runner.py  timeit_runner.py
tests/: test_correctness.py  test_performance.py
